- modified home.hbs and linked to tweets.hbs - added tweet model/controller - added home route to routes.js

--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -2,12 +2,7 @@
 
 <section class="ui raised segment">
 
-  {{> donate }}
+  {{> tweets }}
 
-  <div class="ui  divider"></div>
-
-  <div class="ui teal progress" data-percent="${progress}" id="mainprogress">
-    <div class="bar"></div>
-  </div>
 
 </section>
