- simple tweet function implemented - tweet view updated

--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -2,7 +2,15 @@
 
 <section class="ui raised segment">
 
-  {{> tweets }}
+  <h3 class="ui dividing header">Publish something to the world</h3>
+  <form class="ui reply form" action="/home" method="POST">
+    <div class="field">
+      <textarea name="message"></textarea>
+    </div>
+    <button class="ui blue submit button">Publish</button>
+  </form>
+  {{> formerror }}
 
+  {{> tweets }}
 
 </section>
