--- a/app/views/partials/tweets.hbs
+++ b/app/views/partials/tweets.hbs
@@ -1,10 +1,19 @@
-<section class="ui raised segment">
-  <div class="ui grid ">
-    <aside class="six wide column">
-      <img src="images/Twitter-icon.png" class="ui small image">
-    </aside>
-    <div class="ui form six wide column">
-      Test tweet
+
+<div class="ui comments">
+  {{#each tweets}}
+    <div class="comment">
+      <a class="avatar">
+        <img src="images/Twitter-icon.png">
+      </a>
+      <div class="content">
+        <a class="author">{{user.firstName}} {{user.lastName}}</a>
+        <div class="metadata">
+          <span class="date">Today at 5:42PM</span>
+        </div>
+        <div class="text">
+          {{message}}
+        </div>
+      </div>
     </div>
-  </div>
-</section>
+  {{/each}}
+</div>
