- added timeline.hbs & users.hbs - added some example avatar icons - menu item Timeline added - tweets.hbs updated (Delete link is working now) - added cards to users.hbs and linked to timeline.hbs via tweetsapi

--- a/app/views/partials/mainmenu.hbs
+++ b/app/views/partials/mainmenu.hbs
@@ -2,6 +2,7 @@
   <header class="header item"><a href="/"> Twitterer </a></header>
   <div class="right menu">
     <a id="home"   class= "item" href="/home"> Home</a>
+    <a id="timeline"   class= "item" href="/users"> Timelines</a>
     <a id="settings" class= "item" href="/settings"> Settings</a>
     <a id="logout" class= "item" href="/logout"> Logout</a>
   </div>
