- refactored login page - replaced main with login page

--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -1,7 +1,20 @@
-{{> mainmenu _id="home" }}
+<section class="ui container">
 
-<section class="ui raised segment">
+  {{> mainmenu }}
 
-  {{> tweets }}
+  <section class="ui raised segment">
+
+    <h3 class="ui dividing header">Publish something to the world</h3>
+    <form class="ui reply form" action="/home" method="POST">
+      <div class="field">
+        <textarea name="message"></textarea>
+      </div>
+      <button class="ui blue submit button">Publish</button>
+    </form>
+    {{> formerror }}
+
+    {{> tweets }}
+
+  </section>
 
 </section>
