--- a/app/views/timeline.hbs
+++ b/app/views/timeline.hbs
@@ -1,7 +1,11 @@
-{{> mainmenu _id="timeline" }}
+<section class="ui container">
 
-<section class="ui raised segment">
+  {{> mainmenu _id="timeline" }}
 
-  {{> tweets }}
+  <section class="ui raised segment">
+
+    {{> tweets }}
+
+  </section>
 
 </section>
