- user can tweet on his own timeline

--- a/app/views/timeline.hbs
+++ b/app/views/timeline.hbs
@@ -4,9 +4,9 @@
 
   <section class="ui raised segment">
 
-    {{#if own}}
+    {{#if owner}}
       <h3 class="ui dividing header">Publish something to the world</h3>
-      <form class="ui reply form" action="/home" method="POST">
+      <form class="ui reply form" action="/api/tweets/{{owner._id}}" method="POST">
         <div class="field">
           <textarea name="message"></textarea>
         </div>
