--- a/app/views/partials/mainmenu.hbs
+++ b/app/views/partials/mainmenu.hbs
@@ -1,6 +1,7 @@
 <nav class="ui inverted menu">
   <header class="header item"><a href="/home"> Twitterer </a></header>
   <div class="right menu">
+    <a id="owntimeline"   class= "item" href="/owntimeline"> My Timeline</a>
     <a id="timeline"   class= "item" href="/users"> Timelines</a>
     <a id="settings" class= "item" href="/settings"> Settings</a>
     <a id="logout" class= "item" href="/logout"> Logout</a>
