- added a sample image to display. - modified tweets.hbs to display images

--- a/app/views/partials/tweets.hbs
+++ b/app/views/partials/tweets.hbs
@@ -10,6 +10,11 @@
         <div class="metadata">
           <span class="date">{{fdate}}</span>
         </div>
+        {{#if image}}
+          <div class="text">
+            <img src={{image}} class="ui bordered image medium" name="image">
+          </div>
+        {{/if}}
         <div class="text">
           {{message}}
         </div>
