- added "Delete all Tweets" button in Settings of User  - added user-link to tweets

--- a/app/views/login.hbs
+++ b/app/views/login.hbs
@@ -18,7 +18,7 @@
 <div class="ui middle aligned center aligned grid container">
   <div class="column">
     <h2 class="ui blue image header">
-      <img src="images/Twitter-icon.png" class="image">
+      <img src="/images/Twitter-icon.png" class="image">
       <div class="content">
         Log-in to your account
       </div>
