--- a/app/views/signup.hbs
+++ b/app/views/signup.hbs
@@ -5,7 +5,7 @@
   <section class="ui raised segment">
     <div class="ui grid">
       <aside class="six wide column">
-        <img src="images/Twitter-icon-big.png" class="ui medium image">
+        <img src="/images/Twitter-icon-big.png" class="ui medium image">
       </aside>
       <div class="ui ten wide column">
         <div class="ui stacked fluid form segment">
