- refactored routes  - sort tweets after date 'desc'

--- a/app/views/partials/mainmenu.hbs
+++ b/app/views/partials/mainmenu.hbs
@@ -1,5 +1,5 @@
 <nav class="ui inverted menu">
-  <header class="header item"><a href="/api/tweets"> Twitterer </a></header>
+  <header class="header item"><a href="/tweets"> Twitterer </a></header>
   <div class="right menu">
     <a id="owntimeline"   class= "item" href="/owntimeline"> My Timeline</a>
     <a id="timeline"   class= "item" href="/users"> Timelines</a>
