--- a/app/views/settings.hbs
+++ b/app/views/settings.hbs
@@ -35,7 +35,7 @@
         </div>
 
         <div class="ui stacked fluid form segment">
-          <form action="/api/tweets/deleteAll" method="POST">
+          <form action="/tweets/deleteAll" method="POST">
             <label>Delete all Tweets?  </label>
             <button class="ui blue submit button">Yes, delete</button>
           </form>
