--- a/app/views/users.hbs
+++ b/app/views/users.hbs
@@ -6,20 +6,20 @@
 
     <div class="ui link cards">
       {{#each users}}
-        <a href="/api/tweets/{{_id}}">
+        <a href="/tweets/{{_id}}">
           <div class="card">
             <div class="image">
                 <img src={{avatar}}>
             </div>
             <div class="content">
-              <a class="header" href="/api/tweets/{{_id}}">{{firstName}} {{lastName}}</a>
+              <a class="header" href="/tweets/{{_id}}">{{firstName}} {{lastName}}</a>
               <div class="meta">
                 <span class="date">Member since {{fcreationDate}}</span>
               </div>
               {{#if deletable}}
                 <br>
                 <div class="meta">
-                  <a href="/api/users/delete/{{_id}}">Delete</a>
+                  <a href="/users/delete/{{_id}}">Delete</a>
                 </div>
               {{/if}}
             </div>
