- display new posted images bugfix

--- a/app/views/partials/tweets.hbs
+++ b/app/views/partials/tweets.hbs
@@ -12,7 +12,7 @@
         </div>
         {{#if t.image}}
           <div class="text">
-            <img src={{t.image}} class="ui bordered image medium" name="image">
+            <img src="{{t.image}}" class="ui bordered image medium" name="image">
           </div>
         {{/if}}
         <div class="text">
