--- a/app/views/timeline.hbs
+++ b/app/views/timeline.hbs
@@ -18,9 +18,9 @@
 
       <form class="ui reply form" action="/publish/{{mainmenuid}}" method="POST">
         {{#if image}}
-          <input type="hidden" name="image" value={{image}}/>
+          <input type="hidden" name="image" value="{{image}}"/>
           <div>
-            <img src={{image}} class="ui bordered image medium"/>
+            <img src="{{image}}" class="ui bordered image medium"/>
           </div>
           <br>
         {{/if}}
