--- a/app/views/timeline.hbs
+++ b/app/views/timeline.hbs
@@ -5,33 +5,10 @@
   <section class="ui raised segment">
 
     {{#if can_post}}
-      <h3 class="ui dividing header">Publish something to the world</h3>
 
-      <div>
-          <form method="POST" action="/upload/{{mainmenuid}}" enctype="multipart/form-data">
-            <label for="upload">Image:</label>
-            <input type="file" name="file"/>
-            <button class="ui blue submit button">Load</button>
-            <br><br>
-          </form>
-      </div>
-
-      <form class="ui reply form" action="/publish/{{mainmenuid}}" method="POST">
-        {{#if image}}
-          <input type="hidden" name="image" value="{{image}}"/>
-          <div>
-            <img src="{{image}}" class="ui bordered image medium"/>
-          </div>
-          <br>
-        {{/if}}
-
-        <div class="field">
-          <textarea name="message"></textarea>
-        </div>
-        <button class="ui blue submit button">Publish</button>
-      </form>
-
+      {{> publish }}
       {{> formerror }}
+
     {{/if}}
 
     {{> tweets }}
